--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Kevin's Site</title>
 </head>
 <body>
-    <h1>Welcome to my BI Site</h1>
+    <h1>Welcome to Kevin's BI Site</h1>
     <p>Welcome to my place of showing analytics, come back soon to see what changes I have made. </p>
     <br>
     <img src="Kevin.jpg" height="200px">
